# shomu-discord-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.sqlx/: query-0bfdef906316c2635396dc113ebce889a315b8b0d7bf6a2090ef3abc75927858.json  query-2c074164cba386d7cce056ee4383425f1f5107738bce90060b8b258feca814d5.json  query-2dd02c2460b9ca7e53120d7f64ed54e7fccc7e692c6428563fb34ed7458b0073.json  query-2e572e771c0f202903fb4558b57f0f7ecb96aff6867e72821c54d5053cee6929.json  query-4242c376bd291e3df8029cc58b97d0f35ed2e350f9d76d679a690e5f50097ca3.json  query-48a3dbd1b331e869fbb81d68d8e56057d9eac68e3fe3a0ba2088f2d2d0ffef09.json  query-4c0562acd9eb7eb5fd98cfe2bf9275a8156126182a4dbc5af098ac7c0b634f20.json  query-557438d5ae234c0b02c5d28e76f938638d0313e76e1df1eafba22e4bbb90aa3b.json  query-6b7c994cf7f6794b1f45a61c3740b5d588870828a33eecf9b273015f3d7878d3.json  query-7357dc2862b1c1564274f137da780f451c575168673adad6f3eb907ba347744e.json  query-73be8da93f0adb89587107b5dda30ff6c54ddb884244bd083eaa65311d39092e.json  query-741546c4c421812ccbee2aa69128599f3fabbe13d67e69a114aa9f1455112721.json  query-876b4e6799aecc2178875b6a39d21805ecf5941adf254fdca5ed8ea0a06b4842.json  query-937449d2b133bb74f11220376b22b04cf2ca8eb10a11c0f94856106b10970b56.json  query-bd3e6a291466b55cb62052c0f2e3fcab490d9aa67b8ee20fb2464671ee08c5a1.json  query-bdd11993d845407835b9274c4a26e3d157650f6ed0642465f113987e4dfd44a2.json  query-cdc2056af5fdab5df3d32607c8fb1e6ab60e513fa600b9441a4637eee16c9162.json  query-de353a615e6a3caee538f5be23efd901b91d0c85a8586bfd8d0e06fef18a095d.json  (+2 more)
migrations/: 0_init.sql  (+1 more)
(+17 files in other folders)
